# stitch_intelligence

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  fly.toml  main.py  mqtt_ingestor.py  requirements.txt
backend/test_scripts/: token_gen.py
backend/utilities/: auth_helpers.py  broker_admin.py  db_helpers.py  device_helpers.py
firmware/firmware_v0.4_esp_idf/: CMakeLists.txt  lv_conf.h  sdkconfig.defaults
firmware/firmware_v0.4_esp_idf/main/: CMakeLists.txt  expander.c  expander.h  hardware_config.h  idf_component.yml  indicator.c  indicator.h  lcd_ui.c  lcd_ui.h  main.c  nfc.c  nfc.h  state.c  state.h
frontend/: .dockerignore  Dockerfile  fly.toml  nginx.conf  package.json
frontend/src/: App.css  App.jsx  api.js  main.jsx
frontend/src/components/: DeviceProvisioning.jsx  ProtectedRoute.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  SensorsPage.jsx  Signup.jsx
frontend/src/utilities/: AuthProvider.jsx  tokenHelpers.js
mosquitto/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  fly.toml  mosquitto.fly.conf
scope/: project_scope.md
sql/: init_schema.sql
tools/: device_simulator.py
